# Duplicate-Agent

./: .gitignore  DEB_OLUSTURMA.md  README.md  YENI_OZELLIKLER.md  duplicate-agent.desktop  pyproject.toml  requirements.txt  setup.py
DupAgent.0.0.1.Beta/DEBIAN/: control
DupAgent.0.0.1.Beta/usr/share/DuplicateAgent/: duplicateagent.py
DupAgent.0.0.1.Beta/usr/share/applications/: duplicateagent.desktop
DupAgent.0.2.0.Beta/DEBIAN/: control
DupAgent.0.2.0.Beta/usr/share/DuplicateAgent/: duplicateagent.py
DupAgent.0.3.0.Beta/DEBIAN/: control
DupAgent.0.3.0.Beta/usr/share/DuplicateAgent/: duplicateagent.py
DupAgent.0.8.1.Beta/DEBIAN/: control
DupAgent.0.8.1.Beta/usr/share/applications/: duplicateagent.desktop
DupAgent.0.9.1.Beta/DEBIAN/: control
DupAgent.0.9.1.Beta/usr/share/DuplicateAgent/: duplicateagent.py
DupAgent.0.9.3.Beta/DEBIAN/: control
DupAgent.0.9.3.Beta/usr/share/DuplicateAgent/: duplicateagent.py
debian/: changelog  control  copyright  install  postinst  postrm  prerm  rules
src/: __init__.py  compression_suggester.py  duplicate_folder_finder.py  scheduled_scanner.py  similar_file_finder.py  watchdog_scanner.py
